--- a/app/assets/stylesheets/show_book.css
+++ b/app/assets/stylesheets/show_book.css
@@ -25,7 +25,8 @@
             .show-book-all-information-and-reviews {
                 display: block;
                 max-width: 400px;
-                /* height: 300px; */
+                margin: 20px 0px;
+                
             }
 
             .show-book-review {
